parser.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmt: assignmentStmt
    3     | ifStmt
    4     | ifElseStmt
    5     | whileStmt
    6     | printStmt
    7     | stmtSeq

    8 assignmentStmt: IDENTIFIER ASSIGNMENT expr ENDLINE

    9 ifElseStmt: IF expr THEN stmt ELSE stmt

   10 ifStmt: IF expr THEN stmt

   11 whileStmt: WHILE expr DO stmt

   12 printStmt: PRINT expr ENDLINE

   13 stmtSeq: START stmts END

   14 stmts: stmt
   15      | stmt stmts

   16 expr: NOT expr
   17     | expr PLUS expr
   18     | expr MINUS expr
   19     | expr STAR expr
   20     | expr SLASH expr
   21     | expr LESS expr
   22     | expr LESSEQUAL expr
   23     | expr GREAT expr
   24     | expr GREATEQUAL expr
   25     | expr EQUAL expr
   26     | expr NOTEQUAL expr
   27     | expr AND expr
   28     | expr OR expr
   29     | OPENPAREN expr CLOSEPAREN
   30     | IDENTIFIER
   31     | VALUE
   32     | INPUT


Terminals, with rules where they appear

$end (0) 0
IDENTIFIER (100) 8 30
VALUE (101) 31
PLUS (102) 17
MINUS (103) 18
SLASH (104) 20
STAR (105) 19
LESS (106) 21
GREAT (107) 23
LESSEQUAL (108) 22
GREATEQUAL (109) 24
EQUAL (110) 25
NOTEQUAL (111) 26
AND (112) 27
OR (113) 28
NOT (114) 16
ENDLINE (115) 8 12
ASSIGNMENT (116) 8
OPENPAREN (117) 29
CLOSEPAREN (118) 29
START (119) 13
END (120) 13
IF (121) 9 10
THEN (122) 9 10
ELSE (123) 9
WHILE (124) 11
DO (125) 11
PRINT (126) 12
INPUT (127) 32
error (256)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
stmt (33)
    on left: 2 3 4 5 6 7, on right: 9 10 11 14 15
assignmentStmt (34)
    on left: 8, on right: 2
ifElseStmt (35)
    on left: 9, on right: 4
ifStmt (36)
    on left: 10, on right: 3
whileStmt (37)
    on left: 11, on right: 5
printStmt (38)
    on left: 12, on right: 6
stmtSeq (39)
    on left: 13, on right: 7
stmts (40)
    on left: 14 15, on right: 1 13 15
expr (41)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32, on right:
    8 9 10 11 12 16 17 18 19 20 21 22 23 24 25 26 27 28 29


State 0

    0 $accept: . program $end

    START       shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    program         go to state 6
    stmt            go to state 7
    assignmentStmt  go to state 8
    ifElseStmt      go to state 9
    ifStmt          go to state 10
    whileStmt       go to state 11
    printStmt       go to state 12
    stmtSeq         go to state 13
    stmts           go to state 14


State 1

   13 stmtSeq: START . stmts END

    START       shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    stmt            go to state 7
    assignmentStmt  go to state 8
    ifElseStmt      go to state 9
    ifStmt          go to state 10
    whileStmt       go to state 11
    printStmt       go to state 12
    stmtSeq         go to state 13
    stmts           go to state 15


State 2

    9 ifElseStmt: IF . expr THEN stmt ELSE stmt
   10 ifStmt: IF . expr THEN stmt

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 21


State 3

   11 whileStmt: WHILE . expr DO stmt

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 22


State 4

   12 printStmt: PRINT . expr ENDLINE

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 23


State 5

    8 assignmentStmt: IDENTIFIER . ASSIGNMENT expr ENDLINE

    ASSIGNMENT  shift, and go to state 24


State 6

    0 $accept: program . $end

    $end  shift, and go to state 25


State 7

   14 stmts: stmt .
   15      | stmt . stmts

    START       shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    $default  reduce using rule 14 (stmts)

    stmt            go to state 7
    assignmentStmt  go to state 8
    ifElseStmt      go to state 9
    ifStmt          go to state 10
    whileStmt       go to state 11
    printStmt       go to state 12
    stmtSeq         go to state 13
    stmts           go to state 26


State 8

    2 stmt: assignmentStmt .

    $default  reduce using rule 2 (stmt)


State 9

    4 stmt: ifElseStmt .

    $default  reduce using rule 4 (stmt)


State 10

    3 stmt: ifStmt .

    $default  reduce using rule 3 (stmt)


State 11

    5 stmt: whileStmt .

    $default  reduce using rule 5 (stmt)


State 12

    6 stmt: printStmt .

    $default  reduce using rule 6 (stmt)


State 13

    7 stmt: stmtSeq .

    $default  reduce using rule 7 (stmt)


State 14

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 15

   13 stmtSeq: START stmts . END

    END  shift, and go to state 27


State 16

   32 expr: INPUT .

    $default  reduce using rule 32 (expr)


State 17

   30 expr: IDENTIFIER .

    $default  reduce using rule 30 (expr)


State 18

   31 expr: VALUE .

    $default  reduce using rule 31 (expr)


State 19

   16 expr: NOT . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 28


State 20

   29 expr: OPENPAREN . expr CLOSEPAREN

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 29


State 21

    9 ifElseStmt: IF expr . THEN stmt ELSE stmt
   10 ifStmt: IF expr . THEN stmt
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    THEN        shift, and go to state 30
    OR          shift, and go to state 31
    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42


State 22

   11 whileStmt: WHILE expr . DO stmt
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    DO          shift, and go to state 43
    OR          shift, and go to state 31
    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42


State 23

   12 printStmt: PRINT expr . ENDLINE
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    ENDLINE     shift, and go to state 44
    OR          shift, and go to state 31
    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42


State 24

    8 assignmentStmt: IDENTIFIER ASSIGNMENT . expr ENDLINE

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 45


State 25

    0 $accept: program $end .

    $default  accept


State 26

   15 stmts: stmt stmts .

    $default  reduce using rule 15 (stmts)


State 27

   13 stmtSeq: START stmts END .

    $default  reduce using rule 13 (stmtSeq)


State 28

   16 expr: NOT expr .
   17     | expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    $default  reduce using rule 16 (expr)


State 29

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   29     | OPENPAREN expr . CLOSEPAREN

    OR          shift, and go to state 31
    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42
    CLOSEPAREN  shift, and go to state 46


State 30

    9 ifElseStmt: IF expr THEN . stmt ELSE stmt
   10 ifStmt: IF expr THEN . stmt

    START       shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    stmt            go to state 47
    assignmentStmt  go to state 8
    ifElseStmt      go to state 9
    ifStmt          go to state 10
    whileStmt       go to state 11
    printStmt       go to state 12
    stmtSeq         go to state 13


State 31

   28 expr: expr OR . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 48


State 32

   27 expr: expr AND . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 49


State 33

   21 expr: expr LESS . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 50


State 34

   22 expr: expr LESSEQUAL . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 51


State 35

   23 expr: expr GREAT . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 52


State 36

   24 expr: expr GREATEQUAL . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 53


State 37

   25 expr: expr EQUAL . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 54


State 38

   26 expr: expr NOTEQUAL . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 55


State 39

   17 expr: expr PLUS . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 56


State 40

   18 expr: expr MINUS . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 57


State 41

   19 expr: expr STAR . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 58


State 42

   20 expr: expr SLASH . expr

    INPUT       shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    VALUE       shift, and go to state 18
    NOT         shift, and go to state 19
    OPENPAREN   shift, and go to state 20

    expr  go to state 59


State 43

   11 whileStmt: WHILE expr DO . stmt

    START       shift, and go to state 1
    IF          shift, and go to state 2
    WHILE       shift, and go to state 3
    PRINT       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    stmt            go to state 60
    assignmentStmt  go to state 8
    ifElseStmt      go to state 9
    ifStmt          go to state 10
    whileStmt       go to state 11
    printStmt       go to state 12
    stmtSeq         go to state 13


State 44

   12 printStmt: PRINT expr ENDLINE .

    $default  reduce using rule 12 (printStmt)


State 45

    8 assignmentStmt: IDENTIFIER ASSIGNMENT expr . ENDLINE
   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    ENDLINE     shift, and go to state 61
    OR          shift, and go to state 31
    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42


State 46

   29 expr: OPENPAREN expr CLOSEPAREN .

    $default  reduce using rule 29 (expr)


State 47

    9 ifElseStmt: IF expr THEN stmt . ELSE stmt
   10 ifStmt: IF expr THEN stmt .

    ELSE  shift, and go to state 62

    $default  reduce using rule 10 (ifStmt)


State 48

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr
   28     | expr OR expr .

    AND         shift, and go to state 32
    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42

    $default  reduce using rule 28 (expr)


State 49

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   27     | expr AND expr .
   28     | expr . OR expr

    LESS        shift, and go to state 33
    LESSEQUAL   shift, and go to state 34
    GREAT       shift, and go to state 35
    GREATEQUAL  shift, and go to state 36
    EQUAL       shift, and go to state 37
    NOTEQUAL    shift, and go to state 38
    PLUS        shift, and go to state 39
    MINUS       shift, and go to state 40
    STAR        shift, and go to state 41
    SLASH       shift, and go to state 42

    $default  reduce using rule 27 (expr)


State 50

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   21     | expr LESS expr .
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    SLASH  shift, and go to state 42

    $default  reduce using rule 21 (expr)


State 51

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   22     | expr LESSEQUAL expr .
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    SLASH  shift, and go to state 42

    $default  reduce using rule 22 (expr)


State 52

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   23     | expr GREAT expr .
   24     | expr . GREATEQUAL expr
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    SLASH  shift, and go to state 42

    $default  reduce using rule 23 (expr)


State 53

   17 expr: expr . PLUS expr
   18     | expr . MINUS expr
   19     | expr . STAR expr
   20     | expr . SLASH expr
   21     | expr . LESS expr
   22     | expr . LESSEQUAL expr
   23     | expr . GREAT expr
   24     | expr . GREATEQUAL expr
   24     | expr GREATEQUAL expr .
   25     | expr . EQUAL expr
   26     | expr . NOTEQUAL expr
   27     | expr . AND expr
   28     | expr . OR expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    SLASH  shift, and go to state 42

    $default  reduce using rule 24 (expr)


State 54
